--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>stringart</title>
         <script type="text/javascript" src="d3/d3.js"></script>
+        <script type="text/javascript" src="utility.js"></script>
         <link rel="stylesheet" type="text/css" href="styles.css" />
     </head>
     <body>
@@ -25,4 +26,4 @@
         </svg>
         <script type="text/javascript", src="script.js"></script>
     </body>
-</html> 
+</html>
