Added attribute box for selected line. Nail distance snapping.

--- a/index.html
+++ b/index.html
@@ -2,23 +2,38 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>stringart</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Stringart</title>
         <script type="text/javascript" src="d3/d3.js"></script>
         <script type="text/javascript" src="utility.js"></script>
-        <link rel="stylesheet" type="text/css" href="styles.css" />
+
+        <link href="bootstrap.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
+        <!-- <link href="bootstrap-theme.css" rel="stylesheet"> -->
     </head>
     <body>
         <div>
-            <button onclick="changeMode('draw')">draw</button>
-            <button onclick="changeMode('select')">select</button>
+            <button class="btn btn-primary" onclick="changeMode('draw')">draw</button>
+            <button class="btn btn-primary" onclick="changeMode('select')">select</button>
 
-            <div class="fan-selection">
-                <strong>Selected Fan</strong>
-                <div>Color: <input id="fan-color" type="color" name="favcolor"></div>
-                <div>String Thickness: <input id="fan-thickness" type="number" min="0" step="0.2"></div>
-                <div>Number of Nails: <input id="fan-nails" type="number" min="2" step="1"></div>
+            <div>
+                <div class="line-selection">
+                    <strong>Selected Line</strong>
+                    <div>x1<input id="line-x1" type="number"> y1<input id="line-y1" type="number"></div>
+                    <div>x2<input id="line-x2" type="number"> y2<input id="line-y2" type="number"></div>
+                    <div>Length<input id="line-length" type="number" min="2" step="1"></div>
+                    <div>Angle<input id="line-angle" type="number" step="5"></div>
+                </div>
+                <div class="fan-selection">
+                    <strong>Selected Fan</strong>
+                    <div>Color<input id="fan-color" type="color"></div>
+                    <div>String Thickness<input id="fan-strokeWidth" type="number" min="0" step="0.2"></div>
+                    <div>Number of Nails<input id="fan-numNails" type="number" min="2" step="1"></div>
+                </div>
             </div>
-            <!-- <div class="line-selection"></div> -->
+
         </div>
 
         <svg width="100%" height="720">
