--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         </div>
 
         <svg width="100%" height="720">
-            <!-- todo: create groups for fans and lines here (for better "z" order) -->
+            <g id="fans"></g>
+            <g id="lines"></g>
+            <g id="circles"></g>
         </svg>
         <script type="text/javascript", src="script.js"></script>
     </body>
