Change color and add arrowhead to selected line

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         </div>
 
         <svg width="100%" height="720">
+            <defs>
+                <marker id="arrowhead" markerWidth="12" markerHeight="12" refx="6" refy="4" orient="auto" markerUnits="strokeWidth">
+                    <path d="M 1 1 7 4 1 7 Z" class="arrowhead"/>
+                </marker>
+            </defs>
             <g id="fans"></g>
             <g id="lines"></g>
             <g id="circles"></g>
