Allow changing the z-position of the selection

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div>
             <button class="btn btn-primary" onclick="changeMode('draw')">draw</button>
             <button class="btn btn-primary" onclick="changeMode('select')">select</button>
+            <button class="btn btn-success" onclick="moveSelection(1)">layer up</button>
+            <button class="btn btn-success" onclick="moveSelection(-1)">layer down</button>
 
             <div>
                 <div class="line-selection">
