--- a/index.html
+++ b/index.html
@@ -16,50 +16,96 @@
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <div>
-            <button class="btn btn-primary" onclick="changeMode('draw')">draw</button>
-            <button class="btn btn-primary" onclick="changeMode('select')">select</button>
-            <button class="btn btn-success" onclick="moveSelection(1)">layer up</button>
-            <button class="btn btn-success" onclick="moveSelection(-1)">layer down</button>
-            <button class="btn btn-default" onclick="saveButtonHandler()">save</button>
-            <label class="btn btn-default" for="load-btn">
-                <input id="load-btn" type="file" style="display:none;" onchange="loadButtonHandler()">
-                load
-            </label>
-            <button class="btn btn-default" onclick="clearButtonHandler()">clear</button>
-
-            <div>
+        <div class="row toolbar">
+            <div class="col-xs-12">
+                <button class="btn btn-primary" onclick="changeMode('draw')">draw</button>
+                <button class="btn btn-primary" onclick="changeMode('select')">select</button>
+                <button class="btn btn-success" onclick="moveSelection(1)">layer up</button>
+                <button class="btn btn-success" onclick="moveSelection(-1)">layer down</button>
+                <button class="btn btn-default" onclick="saveButtonHandler()">save</button>
+                <label class="btn btn-default" for="load-btn">
+                    <input id="load-btn" type="file" style="display:none;" onchange="loadButtonHandler()">
+                    load
+                </label>
+                <button class="btn btn-default" onclick="clearButtonHandler()">clear</button>
+            </div>
+        </div>
+        <div class="non-toolbar">
+            <div class="property-box">
                 <div class="line-selection">
                     <strong>Selected Line</strong>
-                    <div>x1<input id="line-x1" type="number"> y1<input id="line-y1" type="number"></div>
-                    <div>x2<input id="line-x2" type="number"> y2<input id="line-y2" type="number"></div>
-                    <div>Keep fixed
-                        <label class="radio-inline"><input type="radio" name="keep-fixed" id="line-keepFixedTail" checked>tail</label>
-                        <label class="radio-inline"><input type="radio" name="keep-fixed" id="line-keepFixedArrow">arrow</label>
+                    <div class="row">
+                        <div class="col-xs-2">Tail</div>
+                        <div class="col-xs-10">
+                            x <input id="line-x1" type="number"> y <input id="line-y1" type="number">
+                        </div>
                     </div>
-                    <div>Length<input id="line-length" type="number" min="0" step="10"></div>
-                    <div>Angle<input id="line-angle" type="number" step="5"></div>
+                    <div class="row">
+                        <div class="col-xs-2">Arrow</div>
+                        <div class="col-xs-10">
+                            x <input id="line-x2" type="number"> y <input id="line-y2" type="number">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-xs-4">Keep&nbsp;fixed</div>
+                        <div class="col-xs-8">
+                            <label class="radio-inline"><input type="radio" name="keep-fixed" id="line-keepFixedTail" checked>tail</label>
+                            <label class="radio-inline"><input type="radio" name="keep-fixed" id="line-keepFixedArrow">arrow</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-2">Length</div>
+                        <div class="col-xs-10">
+                            <input id="line-length" type="number" min="0" step="10">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-2">Angle</div>
+                        <div class="col-xs-10">
+                            <input id="line-angle" type="number" step="5">
+                        </div>
+                    </div>
                 </div>
+
                 <div class="fan-selection">
                     <strong>Selected Fan</strong>
-                    <div>Color<input id="fan-color" type="color"></div>
-                    <div>String Thickness<input id="fan-strokeWidth" type="number" min="0" step="0.2"></div>
-                    <div>Number of Nails<input id="fan-numNails" type="number" min="2" step="1"></div>
+                    <div class="row">
+                        <div class="col-xs-2">Color</div>
+                        <div class="col-xs-10">
+                            <input id="fan-color" type="color">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5">String&nbsp;Thickness</div>
+                        <div class="col-xs-5">
+                            <input id="fan-strokeWidth" type="number" min="0" step="0.2">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5">Number&nbsp;of&nbsp;Nails</div>
+                        <div class="col-xs-5">
+                            <input id="fan-numNails" type="number" min="2" step="1">
+                        </div>
+                    </div>
                 </div>
             </div>
-
+            
+            <div class="svg-container1">
+                <div class="svg-container2">
+                    <svg>
+                        <defs>
+                            <marker id="arrowhead" markerWidth="12" markerHeight="12" refx="6" refy="4" orient="auto" markerUnits="strokeWidth">
+                                <path d="M 1 1 7 4 1 7 Z" class="arrowhead"/>
+                            </marker>
+                        </defs>
+                        <g id="fans"></g>
+                        <g id="lines"></g>
+                        <g id="circles"></g>
+                    </svg>
+                </div>
+            </div>
         </div>
-
-        <svg width="100%" height="720">
-            <defs>
-                <marker id="arrowhead" markerWidth="12" markerHeight="12" refx="6" refy="4" orient="auto" markerUnits="strokeWidth">
-                    <path d="M 1 1 7 4 1 7 Z" class="arrowhead"/>
-                </marker>
-            </defs>
-            <g id="fans"></g>
-            <g id="lines"></g>
-            <g id="circles"></g>
-        </svg>
         <script type="text/javascript", src="script.js"></script>
     </body>
 </html>
