Fixed file loading in firefox.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class="btn btn-success" onclick="moveSelection(-1)" accesskey="4">layer down</button>
             <button class="btn btn-default" onclick="saveButtonHandler()">save</button>
             <label class="btn btn-default" for="load-btn">
-                <input id="load-btn" type="file" style="display:none;" onchange="loadButtonHandler()">
+                <input id="load-btn" type="file" style="display:none;" onchange="loadButtonHandler(event)">
                 load
             </label>
             <button class="btn btn-default" onclick="clearButtonHandler()">clear</button>
