Updated usage section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
                 <div class="usage">
                     <h4>Usage</h4>
                     <dl>
+                        <dd>Use google chrome</dd>
+
                         <dt>draw mode</dt>
                         <dd>
                             Draw lines (rows of 'nails') by clicking twice.
