Refactored to use ES6 arrow functions and classes. Fixed dragging bug in ddraw mode.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                         <dt>select mode</dt>
                         <dd>
                             Select lines by their endpoints and fans by clicking on individual 'strings'.
+                            If multiple endpoints overlap, cycle through them by clicking multiple times.
                             Deselect by clicking somewhere empty or pressing <kbd>esc</kbd>.
                             Line ends can be dragged around.
                         </dd>
